updated git ignore file

--- a/com/DMWA_Assignment/.gitignore
+++ b/com/DMWA_Assignment/.gitignore
@@ -1,2 +1,2 @@
-G:\DMWA_Assignment\.vscode
-G:\DMWA_Assignment\com\DMWA_Assignment\credentials\userInfo
+.vscode
+com\DMWA_Assignment\credentials\userInfo
