--- a/Problem_1A/pom.xml
+++ b/Problem_1A/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback-classic.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-core</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
