--- a/Problem_3/pom.xml
+++ b/Problem_3/pom.xml
@@ -23,6 +23,12 @@
             <artifactId>Problem_1A</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>Problem_1A</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
